force-app/main/default/objects/AnnonceOperations__c/AnnonceOperations__c.object-meta.xml
<CustomObject>
    <description>Objet de lien entre Annonce et Opération</description>
    <label>Annonce Opération</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Annonce Opération</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annonces / Opérations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>