force-app/main/default/objects/AnnonceOperations__c/fields/Annonce__c.field-meta.xml
<CustomField>
    <fullName>Annonce__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Annonce</label>
    <referenceTo>Annonce__c</referenceTo>
    <relationshipLabel>Annonces / Opérations</relationshipLabel>
    <relationshipName>Annonce_Operation_Account</relationshipName>
    <type>Lookup</type>
</CustomField>