force-app/main/default/objects/AnnonceOperations__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annonces / Opérations</relationshipLabel>
    <relationshipName>Annonces_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>