force-app/main/default/objects/AnnonceOperations__c/fields/Date_Echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_Echeance__c</fullName>
    <formula>Annonce__r.Date_d_echeance__c</formula>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>