force-app/main/default/objects/AnnonceOperations__c/fields/Date_Parution__c.field-meta.xml
<CustomField>
    <fullName>Date_Parution__c</fullName>
    <formula>Annonce__r.Date_de_parution__c</formula>
    <label>Date de parution</label>
    <type>Date</type>
</CustomField>