force-app/main/default/objects/AnnonceOperations__c/fields/ID_Explore__c.field-meta.xml
<CustomField>
    <fullName>ID_Explore__c</fullName>
    <formula>Annonce__r.IdExplore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Explore</label>
    <type>Text</type>
</CustomField>