force-app/main/default/objects/AnnonceOperations__c/fields/Lien_Explore__c.field-meta.xml
<CustomField>
    <fullName>Lien_Explore__c</fullName>
    <formula>HYPERLINK(&quot;https://extranet.explore.fr/DotNet/AffichageMarchePublic.aspx?projet=&quot; &amp;  TEXT(Annonce__r.IdExploreSimplifie__c), &quot;Lien Explore&quot;)</formula>
    <label>Lien Explore</label>
    <type>Text</type>
</CustomField>