force-app/main/default/objects/AnnonceOperations__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>&quot;/lightning/r/AnnonceOperation__c/&quot;+Id+&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>