force-app/main/default/objects/AnnonceOperations__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opération</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipLabel>Annonces / Opérations</relationshipLabel>
    <relationshipName>Annonce_Operation_Account</relationshipName>
    <type>Lookup</type>
</CustomField>