force-app/main/default/objects/AnnonceOperations__c/fields/URL_Explore__c.field-meta.xml
<CustomField>
    <fullName>URL_Explore__c</fullName>
    <formula>&quot;https://extranet.explore.fr/DotNet/AffichageMarchePublic.aspx?projet=&quot; &amp; TEXT(Annonce__r.IdExploreSimplifie__c)</formula>
    <label>URL Explore</label>
    <type>Text</type>
</CustomField>